--- a/src/view/LoginForm.fxml
+++ b/src/view/LoginForm.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.LoginFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginFormController">
+   <children>
+      <Label layoutX="159.0" layoutY="14.0" text="Mysql Shell User Login">
+         <font>
+            <Font name="FreeMono Bold" size="22.0" />
+         </font>
+      </Label>
+      <Label layoutX="68.0" layoutY="99.0" text="Host">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="69.0" layoutY="143.0" text="Port">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="69.0" layoutY="189.0" text="Username">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="71.0" layoutY="235.0" text="Password">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtHost" layoutX="273.0" layoutY="95.0" prefHeight="26.0" prefWidth="260.0" text="localhost" />
+      <TextField fx:id="txtPort" layoutX="273.0" layoutY="139.0" prefHeight="26.0" prefWidth="260.0" text="3306" />
+      <TextField fx:id="txtUsername" layoutX="273.0" layoutY="185.0" prefHeight="26.0" prefWidth="260.0" />
+      <TextField fx:id="txtPassword" layoutX="273.0" layoutY="231.0" prefHeight="26.0" prefWidth="260.0" />
+      <Button fx:id="btnConnect" layoutX="115.0" layoutY="316.0" mnemonicParsing="false" onAction="#btnConnect_OnAction" prefHeight="39.0" prefWidth="109.0" style="-fx-background-color: #05386B;" text="Connect" textFill="#fff8f8">
+         <font>
+            <Font name="Noto Serif CJK JP Bold" size="17.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnExit" layoutX="394.0" layoutY="316.0" mnemonicParsing="false" onAction="#btnExit_OnAction" prefHeight="39.0" prefWidth="109.0" style="-fx-background-color: #FC4445;" text="Exit" textFill="#fff8f8">
+         <font>
+            <Font name="Noto Serif CJK JP Bold" size="17.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
