--- a/src/view/MainUI.fxml
+++ b/src/view/MainUI.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="542.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainUIController">
+<AnchorPane prefHeight="542.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainUIController">
    <children>
-      <Label layoutX="162.0" layoutY="14.0" text="Manipulate SQL Code Snippets">
+      <Label layoutX="251.0" layoutY="14.0" text="Manipulate SQL Code Snippets">
          <font>
             <Font name="Norasi Bold" size="18.0" />
          </font>
@@ -20,13 +19,19 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <TextField fx:id="txtSqlCommand" layoutX="40.0" layoutY="92.0" prefHeight="26.0" prefWidth="466.0" />
-      <Button fx:id="btnExecute" layoutX="519.0" layoutY="92.0" mnemonicParsing="false" onAction="#btnExecute_OnAction" prefHeight="26.0" prefWidth="79.0" text="Execute" />
-      <TextArea fx:id="txtOutput" layoutX="40.0" layoutY="183.0" prefHeight="322.0" prefWidth="517.0" />
+      <TextField fx:id="txtSqlCommand" layoutX="40.0" layoutY="92.0" prefHeight="26.0" prefWidth="540.0" />
+      <Button fx:id="btnExecute" defaultButton="true" layoutX="599.0" layoutY="92.0" mnemonicParsing="false" onAction="#btnExecute_OnAction" prefHeight="26.0" prefWidth="79.0" style="-fx-background-color: #8e44ad;" text="Execute" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Button>
+      <TextArea fx:id="txtOutput" layoutX="40.0" layoutY="183.0" prefHeight="322.0" prefWidth="623.0" />
       <Label layoutX="40.0" layoutY="157.0" text="Output:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
+      <Label fx:id="lblCurrentSchema" layoutX="471.0" layoutY="159.0" prefHeight="16.0" prefWidth="190.0" />
+      <Label layoutX="40.0" layoutY="520.0" text="Version 1.0.0" />
+      <Label layoutX="172.0" layoutY="520.0" text="Copyright © copy; 2022 Chamal Peiris. All rights reserved." textFill="#501cab" />
    </children>
 </AnchorPane>
